[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptvero"
version = "0.2.0"
description = "Git-like version control for LLM prompts"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
  {name = "Muhammed Sen"}
]
keywords = ["prompt", "versioning", "llm", "ai", "agents", "version-control"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
pv = "promptvero.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=23.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/MuhammedSenn/promptvero"
Repository = "https://github.com/MuhammedSenn/promptvero"
Issues = "https://github.com/MuhammedSenn/promptvero/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["promptvero"]
exclude = ["tests/"]

[tool.hatch.build.targets.sdist]

[tool.pytest.ini_options]
testpaths = ["tests"]
